# cmake-packages1

./: .gitignore  CMakeLists.txt  README.md  configure.ps1  install.ps1
ext/math_lib/: CMakeLists.txt  math_lib.c  math_lib.h
ext/math_lib/modules/division/: CMakeLists.txt
ext/math_lib/modules/multiplication/: CMakeLists.txt
ext/math_lib/src/: CMakeLists.txt  math_lib.c  math_lib.h
ext/math_lib/src/modules/division/: CMakeLists.txt  division.c  division.h
ext/math_lib/src/modules/multiplication/: CMakeLists.txt  multiplication.h
src/: main.c
